# fun_with

./: .gitignore
Databases/MicrosoftSQL/: README.md
Databases/mongoDB/: course-notes.txt  main.py
SQL/mongoDB/: README.md  course-notes.txt
SQL/mySQL/: main.py
cv/: index.html  style.css
ingest_sql/: main.py
jupyter/: README.md  README.md.txt  copilot-test-1.py  copilot-test-2.py  copilot-test-3.py  copilot-test-py  copilot-test.py
jupyter/notebooks/: 01-Usage-August.csv  README.md
jupyter/notebooks/bokeh/: 01-Intro_to_Bokeh.ipynb  02-Create_Bokeh_Chart.ipynb  README.md  line.html  testing.py
jupyter/notebooks/collect_billing/: .gitignore  GCP-Billing-Data.json  clean_frame.ipynb  config.py  data-explore.ipynb  gcp-billing.ipynb  gcp-prices.csv  gcp.sql  get3xbilling.py  ingest-parquet.py  labels.ipynb  (+10 more)
jupyter/notebooks/demos/conf_test/: .gitignore  pyproject.toml
jupyter/notebooks/demos/conf_test/conf_test/: something.py  test.py
jupyter/notebooks/demos/conf_test/tests/: test_conf_test.py
jupyter/notebooks/demos/pydantic_conf/: .gitignore  pyproject.toml
mySQL/: README.md
ppt/: 01-auto-temp.py
ppt/01-auto/: 01-auto-temp.pptx  01-auto-temp.py
ppt/myFirstTemplate/: README.md  setup.py  template.py
ppt/tests/: 01-helloWorld.pptx  01-helloWorld.py  02-bulletSlide.pptx  02-bulletSlide.py  03-addTextBox.pptx  03-addTextBox.py  04-addPicture.pptx  04-addPicture.py  05-addShape.pptx  05-addShape.py  myFirstPPT.py
searches/: binary_search.py  linear_search.py  linked_list.py  linked_list_merge_sort.py  merge_sort.py  recursive_binary-search.py
(+108 files in other folders)
