[tool.poetry]
name = "conf_test"
version = "0.1.0"
description = ""
authors = ["cltj <tj@cloudlink.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
